# TOD

./: .gitignore  .mcp.json.playwright  .pre-commit-config.yaml  .secrets.baseline  BUILD_AGENT_REVIEW.md  BUILD_AGENT_REVIEW_SUMMARY.md  Muzz_Request_01.md  OPENPOSITION_FIX_REQUIRED.md  OPENPOSITION_VALIDATION_REPORT.md  TRADE_STATS_REVIEW.md  VALIDATION_SUMMARY.txt  alpaca_mcp_server_research_extraction.json  backtesting_frameworks_extraction.json  capture_trade_stats.py  capture_trade_stats_view.py  capture_trade_summary.py  constantine.md  deployment-validation-greeks.py  fetcher_extraction_report.json  fetcher_output_claude_code_tasks.json  final_screenshot.py  generate_research_output.py  lumibot_deep_extraction_2026-01-31.json  lumibot_research_extraction.json  research_alpaca_trading_agents_extraction.json  research_extraction_alpaca_trading_api.json  research_extraction_report.json  research_extraction_summary.md  research_fetcher_iv_dynamics_output.json  research_fetcher_iv_dynamics_report.md  research_fetcher_iv_dynamics_summary.md  research_fetcher_output.json  research_fetcher_output_greeks.json  research_fetcher_report.md  research_fetcher_summary.md  research_fetcher_task_system_extraction.json  validate-ironcondor.mjs  validate_trade_stats_display.py
apps/orchestrator_3_stream/backend/: .dockerignore  .railway  Dockerfile  main.py  pyproject.toml  railway.json
apps/pomodoro_timer/: .gitignore  README.md  config.py  main.py  models.py  notifications.py  pyproject.toml  storage.py  timer.py
apps/pomodoro_timer/app_review/: review_2025-12-24T120000.md
(+451 files in other folders)
