[project]
name = "orchestrator_3_stream_backend"
version = "1.0.0"
description = "Orchestrator 3 Stream - PostgreSQL-backed multi-agent orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "asyncpg",
    "claude-agent-sdk",
    "rich",
    "pydantic",
    "python-dotenv",
    "alpaca-py>=0.43.2",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
